# Gallan-Whatsapp-Clone

./: .replit  README.md  build-electron-app.sh  count_lines.py  electron-builder.json  package-lock.json  package.json  pyproject.toml  run-electron-dev.sh  tsconfig.electron.json  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: ChatArea.tsx  ChatItem.tsx  ConversationStarters.tsx  HeaderBar.tsx  LeftSidebar.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  MobileNav.tsx  NewChatModal.tsx  ProfileModal.tsx  SettingsDialog.tsx  ThemeToggle.tsx  WelcomeScreen.tsx
client/src/components/ui/: slider.tsx  switch.tsx
client/src/hooks/: use-auth.tsx  use-message-polling.ts  use-mobile.tsx
client/src/lib/: auth.ts  formatDate.ts  getDefaultAvatar.ts
client/src/pages/: Home.tsx  Login.tsx  Register.tsx
electron/: main.js  preload.js
public/: flow-diagram.html
python_server/: .env  app.py  db.py  openai_service.py  routes.py  run.py  run_workflow.sh  simple_app.py  test_env.py  test_server.py
python_server/storage/: contacts.json  counters.json  users.json
server/: index.electron.ts  index.ts  mongo-storage.ts  openai-service.ts  routes.ts  storage.ts
shared/: schema.ts
